--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Markdown Syntax'
-description: 'Text, title, and styling in standard markdown'
+description: 'Text, title,fff and styling in standard markdown'
 icon: 'text-size'
 ---
 
