--- a/content/portfoliomanagement/real-time-data.mdx
+++ b/content/portfoliomanagement/real-time-data.mdx
@@ -1,4 +1,15 @@
 ---
 title: Real-time Data, News & Alert System
-description: ...
+description: BIASafe AI's platform integrates a comprehensive Real-time Data, News & Alert System to keep you informed and ahead of market developments. Our AI-powered system curates relevant information and delivers timely alerts, ensuring you never miss a critical event.
 ---
+
+---
+
+## **Key Components**
+
+- **Real-time Market Data:** Access live pricing data for a wide range of assets, including equities, fixed income, and other financial instruments.
+- **Curated News Feed:** Receive a personalized news feed aggregated from reputable financial sources. Our AI algorithms filter and prioritize news based on your portfolio holdings and investment interests.
+- **Customizable Alerts:** Set up alerts based on specific price movements, trading volumes, news events, or other predefined criteria. Receive instant notifications via email or in-platform alerts.
+- **Economic Calendar:** Stay informed about upcoming economic releases and events that could impact the market.
+
+By providing a continuous stream of relevant data, news, and alerts, BIASafe AI equips financial professionals with the knowledge necessary to navigate the dynamic investment landscape effectively.
