Added Intro and R&D section

--- a/content/intro/about.mdx
+++ b/content/intro/about.mdx
@@ -2,3 +2,34 @@
 title: About BIASafe
 description: Welcome to BIASafe
 ---
+
+BIASafe AI is a FinTech company dedicated to delivering a fully integrated
+AI Portfolio Manager Assistant, focused on eliminating biases throughout
+the investment process. By quantifying strategies, automating infrastructure,
+and mitigating behavioral biases, BIASafe AI enhances the accuracy and
+safety of investment decisions.
+
+## **Key Features** 🔑
+
+- **AI-Driven Insights:** Leverages our AI assistant, for real-time performance analysis, error
+  detection, and strategic recommendations, while addressing biases in
+  decision-making
+
+- **Data Centralized and Reconciliation:** Provides real-time performance analytics and ensures ongoing regulatory
+  compliance with customizable protocols and automated monitoring.
+
+- **The Quantification Challenge in Behavioral Finance:** Efficiently manages liquidity and cash flows, and performs rebalancing to
+  optimize performance and ensure adherence to investment policies.
+
+- **Cash & Rebalancing Management:** Enhances trading efficiency and accuracy, and manages post-trade processes
+  for compliance and effective performance assessment
+
+## **Portfolio Management** 📈
+
+- **Institutional Data Feeds:** Gain real-time, comprehensive market coverage across geographies and asset classes with seamlessly integrated institutional-grade data for faster, smarter decisions
+
+- **Quantitative R&D Hub:** Design, test, and deploy systematic strategies using a powerful suite of tools—including rolling backtests, advanced analytics, and intuitive no-code interfaces
+
+- **Execution & Routing Engine:** Manage and automate order execution across brokers and venues with full control, auditability, and compliance—ensuring seamless operations from strategy to settlement
+
+- **Portfolio Intelligence Center:** Unified portfolio aggregation across custodians and accounts, with built-in risk metrics and performance analytics—giving you full visibility and control in one command center
