--- a/content/intro/meet-soteria.mdx
+++ b/content/intro/meet-soteria.mdx
@@ -2,3 +2,28 @@
 title: Meet Soteria
 description: "Why Us?"
 ---
+
+Soteria is Biasafes newest AI engine, designed to revolutionize institutional portfolio management by serving as an assistant through the investment process.
+Leveraging andvanced machine learning and natural language processing to analyze financial data through its Quant Engine, which has been created with advanced mathematical and statistical functions.
+
+---
+
+## ![Soteria](./BiasafeIntro.png)
+
+## **What It Includes**
+
+- **Portfolio Management System**: a graphical and statistical view on all your investments, making it easier to understand how your money is working for you.
+- **API integrations**: With Soteria, you are able to import your finances from worldwide financial institutes such as WealthSimple and Binance using our API integration feature.
+- **Live MarketWatch**: Elegant sidebar that displays the latest market news, updates, and stocks right on the Soteria platform.
+
+Soteria includes everything what an investor is looking for, with easy access to your money, simple buy sell process, and a Marketwatch to keep you updated, making it a must have for any institute or retail investor.
+
+## **API Integration**
+
+Soteria allows user to integrate thier protfolios using our API integration for popualr world wide services.
+
+| Sources          | What they offer                                        |
+| ---------------- | ------------------------------------------------------ |
+| **Binance**      | Cryptocurrency trading, staking, and market data       |
+| **Bybit**        | Advanced scenario generation and derivatives trading   |
+| **WealthSimple** | Automated investing, financial planning, and tax tools |
