--- a/content/intro/why.mdx
+++ b/content/intro/why.mdx
@@ -1,4 +1,33 @@
 ---
-title: Why BIASafe
-description: "Why Us?"
+title: Why BiaSafe
 ---
+
+**Vision** ✨
+
+We aim to lead a new era of portfolio management where AI and automation drive:
+
+- **Unbiased**: Eliminating systemic biases in financial decision-making.
+- **Efficient**: Streamlining processes with cutting-edge AI tools.
+- **Scalable**: Empowering institutions and individuals to grow seamlessly.
+
+Our vision is to create a financial ecosystem that prioritizes fairness, transparency, and inclusivity.
+
+**Mission** 🎯
+
+Our mission is to democratize quantitative portfolio management by building an AI-driven ecosystem that brings together elite quants, institutional asset managers, and retail investors. We focus on:
+
+- Automating and centralizing the investment process from research to execution.
+- Enhancing decision-making through AI-driven human-computer interaction.
+- Minimizing biases across the entire investment spectrum through continuous research and innovation.
+
+**Why BiaSafe?** 🌟
+
+BiaSafe stands out because we are more than just a FinTech company, we are pioneers in ethical AI for finance. Here's what makes us different:
+
+- **Bias Mitigation**: Our platform is designed to identify and eliminate biases in data and decision-making, ensuring fairer outcomes for all.
+- **AI-Driven Insights**: We leverage advanced machine learning algorithms to provide actionable insights that enhance financial performance.
+- **Inclusivity**: We empower both institutional and retail investors by providing tools that are accessible, transparent, and easy to use.
+- **Collaboration**: By fostering a community of quants and asset managers, we drive innovation and create a space for shared growth.
+- **Regulatory Compliance**: Our solutions are built to align with global ethical and regulatory standards, giving you peace of mind.
+
+BiaSafe is not just about managing portfolios—it's about redefining the future of finance with fairness, transparency, and innovation at its core.
