--- a/content/portfoliomanagement/portfolio-risk.mdx
+++ b/content/portfoliomanagement/portfolio-risk.mdx
@@ -24,9 +24,7 @@ That’s the magic: one sentence, multiple tools. Read on for the full menu.
 
 ## Plot Cumulative Growth
 
-**Function:** Calculates compounded value of \$1: $V_t=\prod_{\tau\le t}(1+r_{\tau,p})$ and draws a line chart.
-
-**Key phrases:** `title`.
+**Function:** Calculates compounded value and draws a line chart.
 
 **Example prompt:** “Plot cumulative growth; **title** Tech vs S\&P.”
 
@@ -35,8 +33,6 @@ That’s the magic: one sentence, multiple tools. Read on for the full menu.
 ## Show Allocation Pie
 
 **Function:** Displays the current weight vector $w$ as a pie chart.
-
-**Key phrases:** `title`.
 
 **Example prompt:** “Pie‑chart my optimised weights.”
 
