Fixed spelling and grammar, added prompting section

--- a/content/intro/meet-soteria.mdx
+++ b/content/intro/meet-soteria.mdx
@@ -3,8 +3,8 @@ title: Meet Soteria
 description: "Why Us?"
 ---
 
-Soteria is Biasafes newest AI engine, designed to revolutionize institutional portfolio management by serving as an assistant through the investment process.
-Leveraging andvanced machine learning and natural language processing to analyze financial data through its Quant Engine, which has been created with advanced mathematical and statistical functions.
+Soteria is BIASafes newest AI engine, designed to revolutionize institutional portfolio management by serving as an assistant through the investment process.
+Leveraging advanced machine learning and natural language processing to analyze financial data through its Quant Engine, which has been created with advanced mathematical and statistical functions.
 
 ---
 
@@ -12,7 +12,7 @@ Leveraging andvanced machine learning and natural language processing to analyze
 
 ## **What It Includes**
 
-- **Portfolio Management System**: a graphical and statistical view on all your investments, making it easier to understand how your money is working for you.
+- **Portfolio Management System**: A graphical and statistical view on all your investments, making it easier to understand how your money is working for you.
 - **API integrations**: With Soteria, you are able to import your finances from worldwide financial institutes such as WealthSimple and Binance using our API integration feature.
 - **Live MarketWatch**: Elegant sidebar that displays the latest market news, updates, and stocks right on the Soteria platform.
 
@@ -20,7 +20,7 @@ Soteria includes everything what an investor is looking for, with easy access to
 
 ## **API Integration**
 
-Soteria allows user to integrate thier protfolios using our API integration for popualr world wide services.
+Soteria allows user to integrate their portfolios using our API integration for popular world wide services.
 
 | Sources          | What they offer                                        |
 | ---------------- | ------------------------------------------------------ |
