Fixed some spelling errors and added prompting to Soteria

--- a/content/soteria/prompting/basics.mdx
+++ b/content/soteria/prompting/basics.mdx
@@ -66,4 +66,4 @@ You are able to get one of the best analytics on general news about the market, 
 
 ---
 
-**Now that you understand what you can do with Soteria, lets talk about some of the in depth analytics you can do.**
+**Now that you understand what you can do with Soteria, lets talk about some of the in-depth analytics you can do.**
