Added Advanced Prompting, added images, added RiskFolio

--- a/content/intro/about.mdx
+++ b/content/intro/about.mdx
@@ -9,7 +9,7 @@ the investment process. By quantifying strategies, automating infrastructure,
 and mitigating behavioral biases, BIASafe AI enhances the accuracy and
 safety of investment decisions.
 
-## **Key Features** 🔑
+## **Key Features**
 
 - **AI-Driven Insights:** Leverages our AI assistant, for real-time performance analysis, error
   detection, and strategic recommendations, while addressing biases in decision-making.
@@ -23,7 +23,7 @@ safety of investment decisions.
 - **Cash & Rebalancing Management:** Enhances trading efficiency and accuracy, and manages post-trade processes
   for compliance and effective performance assessment.
 
-## **Portfolio Management** 📈
+## **Portfolio Management**
 
 - **Institutional Data Feeds:** Gain real-time, comprehensive market coverage across geographies and asset classes with seamlessly integrated institutional-grade data for faster, smarter decisions.
 
