--- a/content/intro/meet-soteria.mdx
+++ b/content/intro/meet-soteria.mdx
@@ -13,7 +13,7 @@ Leveraging advanced machine learning and natural language processing to analyze 
 ## **What It Includes**
 
 - **Portfolio Management System**: A graphical and statistical view on all your investments, making it easier to understand how your money is working for you.
-- **API integrations**: With Soteria, you are able to import your finances from worldwide financial institutes such as WealthSimple and Binance using our API integration feature.
+- **API integrations**: With Soteria, you are able to import your finances from worldwide financial institutes such as WealthSimple, Binance, and Bybit using our API integration feature.
 - **Live MarketWatch**: Elegant sidebar that displays the latest market news, updates, and stocks right on the Soteria platform.
 
 Soteria includes everything what an investor is looking for, with easy access to your money, simple buy sell process, and a Marketwatch to keep you updated, making it a must have for any institute or retail investor.
