--- a/content/soteria/apis.mdx
+++ b/content/soteria/apis.mdx
@@ -16,8 +16,8 @@ To add an API, follow these simple steps
 
 1. Click your icon at the bottom left and go to "Settings"
 
-Image
+## ![Settings](./Images/Settings.png)
 
 2. Go to the API Keys tab and add your desired API Key
 
-Image
+## ![API](./Images/API.png)
