--- a/content/intro/why.mdx
+++ b/content/intro/why.mdx
@@ -2,7 +2,7 @@
 title: Why BIASafe
 ---
 
-## Vision ✨
+## Vision
 
 We aim to lead a new era of portfolio management where AI and automation drive:
 
@@ -12,17 +12,17 @@ We aim to lead a new era of portfolio management where AI and automation drive:
 
 Our vision is to create a financial ecosystem that prioritizes fairness, transparency, and inclusively.
 
-## Mission 🎯
+## Mission
 
 Our mission is to democratize quantitative portfolio management by building an AI-driven ecosystem that brings together elite quants, institutional asset managers, and retail investors. We focus on:
 
-- Automating and centralizing the investment process from research to execution.
-- Enhancing decision-making through AI-driven human-computer interaction.
-- Minimizing biases across the entire investment spectrum through continuous research and innovation.
+- **Automating** and centralizing the investment process from research to execution.
+- **Enhancing** decision-making through AI-driven human-computer interaction.
+- **Minimizing** biases across the entire investment spectrum through continuous research and innovation.
 
-## Why BiaSafe? 🌟
+## Why BIASafe?
 
-BiaSafe stands out because we are more than just a FinTech company, we are reshaping how AI can provide growth in finance. Here's what makes us different:
+BIASafe stands out because we are more than just a FinTech company, we are reshaping how AI can provide growth in finance. Here's what makes us different:
 
 - **Bias Mitigation**: Our platform is designed to identify and eliminate biases in data and decision-making, ensuring fairer outcomes for all.
 - **AI-Driven Insights**: We leverage advanced machine learning algorithms to provide actionable insights that enhance financial performance.
@@ -30,4 +30,4 @@ BiaSafe stands out because we are more than just a FinTech company, we are resha
 - **Collaboration**: By fostering a community of quants and asset managers, we drive innovation and create a space for shared growth.
 - **Regulatory Compliance**: Our solutions are built to align with global ethical and regulatory standards, giving you peace of mind.
 
-BiaSafe is not just about managing portfolios-it's about redefining the future of finance with fairness, transparency, and innovation at its core.
+BIASafe is not just about managing portfolios, it's about redefining the future of finance with fairness, transparency, and innovation at its core.
