--- a/content/soteria/prompting/basics.mdx
+++ b/content/soteria/prompting/basics.mdx
@@ -13,7 +13,7 @@ Soteria can easily provide you with up-to-date pricing information with some sim
 - "What is the price change in Apple over the past 30 days"
 - "How is ETH doing todays?
 
-**INSERT VIDEO**
+## ![PriceAndChanges](../Images/PriceAndChanges.png)
 
 ---
 
@@ -25,7 +25,7 @@ Soteria can also visualize the data for you with different types of graphs.
 - "Plot Teslas stock and Apples stock side by side in a line graph"
 - "Use Candlesticks to plot Bitcoin"
 
-**INSERT VIDEO**
+## ![PriceAndChanges](../Images/PLotting.png)
 
 ---
 
@@ -37,7 +37,7 @@ Soteria can also automate your transaction, allow you to have a centralized sour
 - "Sell my position in Solana"
 - "Have 10% of my portfolio be Apple Shares"
 
-**INSERT VIDEO**
+## ![Selling](../Images/Selling.png)
 
 ---
 
@@ -50,7 +50,7 @@ Soteria also provides users with the ability to get financial information about 
 - "Give me the q1 cash flows for Google"
 - "What is the latest news on interest rates?"
 
-**INSERT VIDEO**
+## ![News](../Images/News.png)
 
 ---
 
@@ -62,7 +62,7 @@ You are able to get one of the best analytics on general news about the market, 
 - "What is the latest news on Tariffs?
 - "What is the PE, Cash, and PB ratio of Snowflake?"
 
-**INSERT VIDEO**
+## ![Ratios](../Images/Ratios.png)
 
 ---
 
